<resources>
    <string name="app_name">Celengan Bersama</string>
    <string name="indstudio_logo">INDStudio Logo</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="connect_to_your_social_media">Or connect to social media</string>
    <string name="first_name">First Name</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name (optional)</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">Avatar</string>
    <string name="my_display_name">My Display Name</string>
    <string name="my_email">My Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="money_icon">Money Icon</string>
    <string name="see_more_menu_option">See More Menu Option</string>
    <string name="balance">Balance</string>
    <string name="no_money">Rp. 0,00-,</string>
    <string name="saving">Saving</string>
    <string name="no_saving">0</string>
    <string name="app_settings">App Settings</string>
    <string name="settings">Settings</string>
    <string name="default_version">1.0.0</string>
    <string name="app_version">App Version</string>
    <string name="logout">Logout</string>
    <string name="my_saving">My Saving</string>
    <string name="see_all">See all</string>
    <string name="saving_0">Saving: 0</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="my_profile">My Profile</string>

</resources>
